[gd_scene load_steps=29 format=3 uid="uid://burminmmqqolu"]

[ext_resource type="Script" path="res://Entities/Player/Player.gd" id="1_wm223"]
[ext_resource type="Texture2D" uid="uid://bdhstl0tusmvo" path="res://Entities/Interactables/Package/package.png" id="2_m2id7"]
[ext_resource type="Texture2D" uid="uid://db26g1n7vv2jf" path="res://Entities/Player/Dave1_spritesheet.png" id="2_p76uq"]
[ext_resource type="Texture2D" uid="uid://c1bijsun1ka5e" path="res://Entities/Player/TorchGradient_outer.png" id="4_wruaj"]
[ext_resource type="Texture2D" uid="uid://c038khbromnbg" path="res://Entities/Player/TorchGradient_mid.png" id="5_iojmn"]
[ext_resource type="Texture2D" uid="uid://b21n5pmq71tel" path="res://Entities/Player/TorchGradient_inner.png" id="5_uugny"]
[ext_resource type="Texture2D" uid="uid://xhs7skarkpbw" path="res://Entities/Player/DirectionArrow.png" id="7_lj7fr"]
[ext_resource type="AudioStream" uid="uid://bexd4kg7jgsp2" path="res://Sounds/HitSounds/goblin-2.wav" id="8_r6n3k"]
[ext_resource type="AudioStream" uid="uid://s0f2lkigqqdm" path="res://Sounds/HitSounds/goblin-1.wav" id="9_t8kjd"]
[ext_resource type="AudioStream" uid="uid://yy3r1ofhk70u" path="res://Sounds/WalkSounds/footstep04.ogg" id="10_2tpog"]
[ext_resource type="AudioStream" uid="uid://lbtfee271eew" path="res://Sounds/WalkSounds/footstep06.ogg" id="11_d2akw"]
[ext_resource type="AudioStream" uid="uid://cx0apd6wuadir" path="res://Sounds/DialogueSounds/goblin-5.wav" id="11_ebbuj"]
[ext_resource type="AudioStream" uid="uid://blyr7cff0vog1" path="res://Sounds/WalkSounds/footstep07.ogg" id="12_6vcdg"]
[ext_resource type="AudioStream" uid="uid://c1nv3liw06oy5" path="res://Sounds/DialogueSounds/goblin-8.wav" id="12_8a1r2"]
[ext_resource type="AudioStream" uid="uid://bibxbt54t17ve" path="res://Sounds/WalkSounds/footstep09.ogg" id="13_psdm5"]

[sub_resource type="GDScript" id="GDScript_16fat"]
script/source = "extends Sprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8q262"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2plcr"]
radius = 53.0

[sub_resource type="Animation" id="Animation_yatu4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_f5lhj"]
resource_name = "Standing"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_ksgam"]
resource_name = "Walking"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_ayias"]
resource_name = "Death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_i4ng1"]
resource_name = "Dash"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5wsrp"]
_data = {
"Dash": SubResource("Animation_i4ng1"),
"Death": SubResource("Animation_ayias"),
"RESET": SubResource("Animation_yatu4"),
"Standing": SubResource("Animation_f5lhj"),
"Walking": SubResource("Animation_ksgam")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7ea4"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0hhl3"]
streams_count = 2
stream_0/stream = ExtResource("8_r6n3k")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_t8kjd")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pmpjh"]
streams_count = 4
random_pitch = 1.51
stream_0/stream = ExtResource("10_2tpog")
stream_0/weight = 1.0
stream_1/stream = ExtResource("11_d2akw")
stream_1/weight = 1.0
stream_2/stream = ExtResource("12_6vcdg")
stream_2/weight = 1.0
stream_3/stream = ExtResource("13_psdm5")
stream_3/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qlp5m"]
streams_count = 2
random_pitch = 1.35
stream_0/stream = ExtResource("11_ebbuj")
stream_0/weight = 1.0
stream_1/stream = ExtResource("12_8a1r2")
stream_1/weight = 1.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Player"]]
collision_layer = 524545
collision_mask = 257
script = ExtResource("1_wm223")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_p76uq")
hframes = 4
vframes = 4
frame = 1
script = SubResource("GDScript_16fat")

[node name="PackageSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, 3)
texture = ExtResource("2_m2id7")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8q262")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.75, 1.75)

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="InteractCollider" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("CircleShape2D_2plcr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5wsrp")
}

[node name="RollTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="RollCooldown" type="Timer" parent="."]
wait_time = 0.9

[node name="OuterLight" type="PointLight2D" parent="."]
light_mask = 43
visibility_layer = 43
scale = Vector2(1, 0.7)
blend_mode = 2
range_item_cull_mask = 42
shadow_enabled = true
shadow_item_cull_mask = 86
texture = ExtResource("4_wruaj")

[node name="MidLight" type="PointLight2D" parent="."]
light_mask = 43
visibility_layer = 43
scale = Vector2(1, 0.7)
blend_mode = 2
shadow_enabled = true
texture = ExtResource("5_iojmn")

[node name="InnerLight" type="PointLight2D" parent="."]
light_mask = 43
visibility_layer = 43
scale = Vector2(1, 0.7)
blend_mode = 2
shadow_enabled = true
texture = ExtResource("5_uugny")

[node name="CinematicAreaDetector" type="Area2D" parent="."]
collision_layer = 8388608
collision_mask = 8388608

[node name="CollisionShape2D" type="CollisionShape2D" parent="CinematicAreaDetector"]
shape = SubResource("RectangleShape2D_t7ea4")

[node name="DirectionPointer" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.905882)
z_index = 1
position = Vector2(0, -17)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_lj7fr")

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathMoveTimer" type="Timer" parent="."]
one_shot = true

[node name="HitAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_0hhl3")
volume_db = -4.957

[node name="WalkAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_pmpjh")
volume_db = -35.318
attenuation = 1.7411

[node name="DialogueAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_qlp5m")
volume_db = -22.168

[connection signal="area_entered" from="CinematicAreaDetector" to="." method="_on_cinematic_area_detector_area_entered"]
[connection signal="area_exited" from="CinematicAreaDetector" to="." method="_on_cinematic_area_detector_area_exited"]
[connection signal="timeout" from="DeathMoveTimer" to="." method="_on_death_move_timer_timeout"]
